log
Fri 12 Aug 2022 01:14:49 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
d3c770a
Fri 12 Aug 2022 01:20:24 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
935d56d
Fri 12 Aug 2022 01:25:22 PM UTC: 
 exercises.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:48:17: error: ‘aux’ undeclared (first use in this function)
   48 |   *suma = sumaN(aux, m);
      |                 ^~~
exercises.c:48:17: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e4e0d8c
Fri 12 Aug 2022 01:25:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
dd12643
Fri 12 Aug 2022 01:26:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d17b93a
Fri 12 Aug 2022 01:27:22 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 20/70
a9d228d
Fri 12 Aug 2022 07:43:57 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:67:3: error: expected ‘,’ or ‘;’ before ‘p’
   67 |   p->nombre = nombre[];
      |   ^
exercises.c:68:16: error: expected expression before ‘]’ token
   68 |   p->rut = rut[];
      |                ^
Compilation failed
d6c5a15
Fri 12 Aug 2022 07:44:10 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:67:22: error: expected expression before ‘]’ token
   67 |   p->nombre = nombre[];
      |                      ^
exercises.c:68:16: error: expected expression before ‘]’ token
   68 |   p->rut = rut[];
      |                ^
Compilation failed
5f8c5e5
